# lvars-latency-bench

./: .gitignore  LVars.hs  LatencyRunner.hs  Makefile  MonadPar.hs  OhuaFBM.hs  OhuaSBFM.hs  OhuaSBFMPar.hs  Remote.make  Sequential.hs  Strategies.hs  latency-bench.cabal  makeplot.py  package.yaml  stack.yaml
experiments/scale-cores-at-peak-20-reps/: gen_conf  results.json
experiments/scale-work-unanimously-20-reps/: gen_conf  gen_conf_2  results-2.json  results.json
experiments/work-balanced-core-optimised/: gen_conf  results.json
experiments/work-imbalanced-core-optimised/: gen_conf  results.json
experiments/work-imbalanced-with-inline/: gen_conf  results.json
src/: LatencyRunner.hs  OhuaSBFMBase.hs
