name:                latency-bench
version:             0.1.0.0
synopsis:            Cabal file for building the bf-traverse-ohua benchmark executable. A part of the benchmarking infrastructure for the fhpc13-lvars library.
author:              Justus Adam
maintainer:          justus.adam@tu-dresden.de
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

executable ohua-latency
  main-is: Ohua.hs
  other-modules: LatencyRunner
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts
  build-depends: base
               , statefulness
               , ohua-core
               , vector
               , rdtsc
               , containers
               , transformers
               , deepseq
               , time
               , split
               , bytestring
               , mtl
               , aeson

executable LVar-latency
  main-is:          LVars.hs
  other-modules: LatencyRunner
  default-language: Haskell2010
  ghc-options:		-O2 -threaded -rtsopts
  build-depends:    base
                  , split
                  , containers
                  , bytestring
                  , time
                  , rdtsc
                  , vector
                  , deepseq
                  , lvish
                  , transformers
                  , monad-par
                  , monad-par-extras